--- a/sass/blocks/contacts/_heading.scss
+++ b/sass/blocks/contacts/_heading.scss
@@ -1,6 +1,6 @@
 
 .contact-heading {
-   background: $headingBg url(../../../img/contacts/laptop.png) right center / cover no-repeat;
+   background-color: $headingBg;
 }
 
 .heading-title {
