--- a/sass/blocks/home/_slider.scss
+++ b/sass/blocks/home/_slider.scss
@@ -4,6 +4,7 @@
 .slider .title {
    padding: 5px;
    margin-bottom: 35px;
+   background-color: rgba($color: $dark, $alpha: 0.5);
 }
 .carousel {
    position: relative;
