--- a/sass/blocks/details/_portfolio-slider.scss
+++ b/sass/blocks/details/_portfolio-slider.scss
@@ -13,6 +13,7 @@
 .slick-track{
 	display: flex;
    align-items: flex-start;
+   transform: translate3d(0,0,0);
    
 }
 .slider-big__item .slick-slide  {
@@ -34,7 +35,7 @@
          font-family: $fontFamilyBold;
          font-size: 13px;
          text-transform: uppercase;
-         padding: 25px 35px;         
+         padding: 25px 20px;         
          transition: color 0.3s ease;         
       }
    }   
@@ -76,7 +77,6 @@
       left: 5px;
       top: 47%;
       transform: translateY(-50%);
-      margin-left: 10px;
       transition: color 0.3s linear;
    }
    &:hover {
@@ -101,7 +101,6 @@
       right: 5px;
       top: 47%;
       transform: translateY(-50%);
-      margin-right: 10px;
       transition: color 0.3s linear;
    }
    &:hover {
@@ -111,14 +110,13 @@
       }
    }
 }
+
 .slider-portfolio {
    position: relative;
    padding: 70px 0;
    width: 100%;
-   height: 100%;
-   
-}   
-   
+   height: 100%;   
+}      
 
 .column-left {
    &__top {
@@ -173,18 +171,20 @@
 
    &__bottom {
       display: flex;
+      margin-bottom: 15px;
       .btn-share {
-         display: inline-block;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         flex-shrink: 0;
          width: 100px;
-         height: 45px;
+         min-height: 45px;
          background-color: #707070;
          color: $white;
          font-family: $fontFamilyBold;
          font-size: 16px;
          text-transform: uppercase;
-         padding: 5px;
-         line-height: 35px;
-         vertical-align: middle;
+         padding: 10px 10px 10px 5px;
          transition: background-color 0.3s linear;
          &:hover {
             background-color: $textDark;
@@ -200,9 +200,10 @@
       .social-list {
          position: relative;
          @include flex-center;
+         flex-wrap: wrap;
          background-color: #e1e1e1;
-         padding: 15px;
          margin-left: 30px;
+         margin-bottom: 0;
          &::before {
             content: '';
             display: block;
@@ -216,8 +217,10 @@
          }
       }
       .social-link {
+         display: inline-block;
          color: #707070;
          margin: 0 15px;
+         padding: 8px 0;
          transition: color 0.3s linear;
          &:hover {
             color: $textDark;
@@ -250,8 +253,12 @@
    &__item {
       height: 115px;
       padding-bottom: 10%;
+      padding-right: 10px;
       overflow: hidden;
       position: relative;
+      &:last-child {
+         padding-right: 0;
+      }
       img {
          width: 100%;
          height: 100%;
