--- a/sass/blocks/blog/_blog.scss
+++ b/sass/blocks/blog/_blog.scss
@@ -264,7 +264,7 @@
 }
 .video {
    height: 245px;
-   background: url(../../../img/blog/video.jpg) right center / cover no-repeat;
+   background: url(../img/blog/video.jpg) right center / cover no-repeat;
 }
 
 .blog-more {
