--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -130,6 +130,9 @@
          padding: 23px 45px;
       }
    }
+   .recent .card-body {
+      padding: 30px 20px 20px;
+   }
 }
 
 /* Medium Devices, Desktops */
