--- a/sass/blocks/blog/_blog.scss
+++ b/sass/blocks/blog/_blog.scss
@@ -268,7 +268,7 @@
    background: url(../img/blog/video.jpg) right center / cover no-repeat;
 }
 
-.load-more {
+.blog-more {
    @include flex-center;
    width: 125px;
    height: 30px;
