--- a/sass/blocks/post/_post-heading.scss
+++ b/sass/blocks/post/_post-heading.scss
@@ -1,4 +1,3 @@
 .post-heading {
-   background: $headingBg url(../../img/single_post/girl.jpg) 70% top / cover no-repeat;
-
+   background: $headingBg url(../img/single_post/girl.jpg) 70% top / cover no-repeat;
 }
