--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,7 +17,6 @@
 /* Details*/
 @import 'blocks/details/portfolio-slider';
 /*Blog*/ 
-@import 'blocks/blog/blog-heading';
 @import 'blocks/blog/blog';
 /*Post*/ 
 @import 'blocks/post/post-heading';
@@ -28,4 +27,5 @@
 @import 'blocks/contacts/map';
 @import 'blocks/contacts/value';
 
+/* Media */ 
 @import 'media/media';
