--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -60,7 +60,7 @@
       margin-right: 10px;
    }
    .contact-heading {
-      background: url(../../../img/contacts/laptop.png) right center / cover no-repeat;
+      background: url(../img/contacts/laptop.png) right center / contain no-repeat;
    }
 }
 
